--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,14 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput name="posts" rows="6" [(ngModel)]="inputValue"></textarea>
-  </mat-form-field>
-  <button
-  mat-raised-button
-  color="primary"
-  (click)="onCreatePost()">Save Post</button>
+  <form>
+    <mat-form-field>
+      <input matInput type="text" [(ngModel)]="inputTitle">
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput name="posts" rows="6" [(ngModel)]="inputContent"></textarea>
+    </mat-form-field>
+    <button
+    mat-raised-button
+    color="primary"
+    (click)="onCreatePost()">Save Post</button>
+  </form>
 </mat-card>
-
-<p>{{ newPost }}</p>
